still trying to fix jomhuria font issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 }
 
 .text-jomhuria {
-  font-family: 'Jomhuria';
+  font-family: 'Jomhuria', cursive;
 }
 
 @media only screen and (min-width: 1024px){
